--- a/starship.toml
+++ b/starship.toml
@@ -3,14 +3,12 @@
 
 add_newline = false
 
+[line_break]
+disabled = false
+
 [character]
 success_symbol = '[➜](bold green)'
+error_symbol = '[➜](bold red)'
 
 [nodejs]
 detect_files = [ "package.json", ".node-version", ".nvmrc", "!bun.lockb" ]
-
-[aws]
-disabled = true
-
-[gcloud]
-disabled = true
