--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -2,6 +2,11 @@ import = [
   "~/.config/alacritty/catppuccin-mocha.toml"
 ]
 
+[window]
+padding = { x = 16, y = 10 }
+opacity = 0.90
+blur = true
+
 [font]
 size = 13
 normal = { family = "Monaspace Krypton", style = "regular" }
